src/render/snapshots/dlin__render__impact__tests__snapshot_impact_text_with_sql.snap
---
source: src/render/impact.rs
expression: output
---

Impact Analysis: stg_orders
==================================================
Overall Severity: CRITICAL

Summary:
  Affected models:    1
  Affected tests:     1
  Affected exposures: 1

Exposure Paths:
  stg_orders -> orders -> dashboard

Impacted Nodes:
  [critical] dashboard (exposure, 2 hops)
  [high    ] orders (model, 1 hops) [models/marts/orders.sql]
    --- SQL ---
    SELECT
        o.id,
        o.status,
        s.total
    FROM {{ ref('stg_orders') }} o
    JOIN {{ ref('stg_payments') }} s ON o.id = s.order_id
    ----------
  [low     ] orders_positive (test, 2 hops)
